--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
                 
     <div class="header-links">
         <ul id="float1">
-            <li id="inline1">About Me</li>
-            <li id="inline2">Portfolio</li>
-            <li id="inline3">Contact Me</li>
+                <li id="inline1"><a href="index.html">About Me</a></li>
+                <li id="inline2"><a href="portfolio.html">Portfolio</a></li>
+                <li id="inline3"><a href="contact.html">Contact Me</a></li>
         </ul>
     </div>
 </header>
